tests/compile_errors/match-range-containing-literal.buzz
// Overlapping `match` condition
test "match range containing literal condition" {
    _ = match (3) {
        1..5 -> "range",
        3 -> "literal",
        else -> "other",
    };
}
